--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,90 +1,44 @@
 
-  <span>الشريعة</span>
-  <span> القران</span>
-  <span> اسلام</span>
-  <span> Welcome</span>
-  6236 اية
-  المنبر
-  المنامات
-  مقر او بيت
-  فتاوي
-  هلال
-  اركان الاسلام
-
-  <div class="example-container" >
-
-    <!-- Nav -->
-    <mat-toolbar class="example-toolbar">
-      <button mat-raised-button  class="btnCategory" (click)="snav.toggle();">
-        <mat-icon>menu</mat-icon>
-      </button>
-
-      <a class="mat-title websiteName" routerLink=""> The Islamic<span class="websiteName2"> Nation</span>
-      </a>
-
-
-      <span class="example-spacer"></span>
-      <a class="mat-body-strong logo" routerLink="">
-        <img src="./assets/img/logo.svg"
-        width="75px" alt=""></a>
-
-
-
-
-
-      <!--
-     <button class="btnMenu" routerLink="aboutUs" mat-button><mat-icon>account_balance_wallet</mat-icon>
-      156.0290 JMICoin
-      </button> -->
-
-
-
-
-
-      <span class="example-spacer"></span>
+  <!-- Nav -->
+    <nav class="bg-white shadow dark:bg-gray-800">
+    <div class="container px-6 py-3 mx-auto">
       <app-header></app-header>
-    </mat-toolbar>
+    </div>
+  </nav>
+  <!-- <span>الشريعة</span>
+<span> القران</span>
+<span> اسلام</span>
+<span> Welcome</span>
+6236 اية
+المنبر
+المنامات
+مقر او بيت
+فتاوي
+هلال
+اركان الاسلام -->
 
+  <!-- <a class="mat-title websiteName" routerLink=""> The Islamic<span class="websiteName2"> Nation</span>
+  </a>
 
+  <a class="mat-body-strong logo" routerLink="">
+    <img src="./assets/img/logo.svg" width="75px" alt=""></a>
 
-    <!-- Sidbar left -->
-    <mat-sidenav-container class="sidenav-container">
-      <mat-sidenav #snav
-        fixedTopGap="56">
-        <mat-nav-list>
+<button class="btnMenu" routerLink="aboutUs" mat-button><mat-icon>account_balance_wallet</mat-icon>
+156.0290 JMICoin
+</button>
+   -->
+  <!-- Sidbar left -->
+      <mat-nav-list>
+        <!-- <mat-icon>menu</mat-icon> -->
 
-          <!-- <app-side-bar-left></app-side-bar-left> -->
-        </mat-nav-list>
-      </mat-sidenav>
+        <!-- <app-side-bar-left></app-side-bar-left> -->
+      </mat-nav-list>
 
-      <!-- Container pages -->
-      <mat-sidenav-content>
-        <div class="pages">
-          <app-spinner></app-spinner>
-          <router-outlet ></router-outlet>
-        </div>
-        <!-- Footer -->
-        <!-- <app-footer-bottom ></app-footer-bottom> -->
-
-      </mat-sidenav-content>
-    </mat-sidenav-container>
-
-
-
-
-
-
-  </div>
-
-
-
-
-
-
-
-
-
-
-
-
+    <!-- Container pages -->
+      <div class="pages">
+        <app-spinner></app-spinner>
+        <router-outlet></router-outlet>
+      </div>
+      <!-- Footer -->
+      <!-- <app-footer-bottom ></app-footer-bottom> -->
 
