--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,8 @@
   <div class="flex items-center justify-between">
     <div class="flex items-center">
       <a class="text-2xl font-bold text-gray-800 transition-colors duration-200 transform dark:text-white lg:text-3xl hover:text-gray-700 dark:hover:text-gray-300"
-        href="#">Brand</a>
+      websiteName routerLink="">الامة<span class="websiteName2"> الاسلامية</span>
+        </a>
 
       <!-- Search input on desktop screen -->
       <div class="hidden mx-10 md:block">
@@ -17,7 +18,7 @@
 
           <input type="text"
             class="w-full py-2 pl-10 pr-4 text-gray-700 bg-white border rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-400 dark:focus:border-blue-300 focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-blue-300"
-            placeholder="Search">
+            placeholder="بحث">
         </div>
       </div>
     </div>
@@ -51,18 +52,32 @@
 
     <div class="flex items-center py-2 -mx-1 md:mx-0" #showLogin>
 
-      <a
-      class="block w-1/2 px-3 py-2 mx-1 text-sm font-medium leading-5 text-center text-white transition-colors duration-200 transform bg-gray-500 rounded-md hover:bg-blue-600 md:mx-2 md:w-auto"
-        mat-button [matMenuTriggerFor]="menu1"
-        >Login <mat-icon>account_circle</mat-icon></a>
-        <mat-menu #menu1="matMenu">
-          <button  (click)="openDialogLoging()">Logga in</button>
-          <button  (click)="openDialogSignUp()">Registera</button>
-        </mat-menu>
+      <button
+      class="flex items-center px-3 py-2 mx-1 text-sm font-medium leading-5 text-center text-white transition-colors duration-200 transform bg-gray-500 rounded-md hover:bg-blue-600 md:mx-2 md:w-auto"
+      (click)="openDialogLoging()">
+      <mat-icon>account_circle</mat-icon>
+      <span class="mx-1">تسجيل الدخول</span>
+      </button >
       <a class="block w-1/2 px-3 py-2 mx-1 text-sm font-medium leading-5 text-center text-white transition-colors duration-200 transform bg-blue-500 rounded-md hover:bg-blue-600 md:mx-0 md:w-auto"
-        href="#">Join free</a>
+        (click)="openDialogSignUp()">انضم مجانا</a>
     </div>
     <div  class="flex items-center py-2 -mx-1 md:mx-0" *ngIf="userExist;">
+
+      <div class="flex items-center mt-4 md:mt-0">
+        <button class="hidden mx-4 text-gray-600 transition-colors duration-200 transform md:block dark:text-gray-200 hover:text-gray-700 dark:hover:text-gray-400 focus:text-gray-700 dark:focus:text-gray-400 focus:outline-none" aria-label="show notifications">
+            <svg class="w-6 h-6" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M15 17H20L18.5951 15.5951C18.2141 15.2141 18 14.6973 18 14.1585V11C18 8.38757 16.3304 6.16509 14 5.34142V5C14 3.89543 13.1046 3 12 3C10.8954 3 10 3.89543 10 5V5.34142C7.66962 6.16509 6 8.38757 6 11V14.1585C6 14.6973 5.78595 15.2141 5.40493 15.5951L4 17H9M15 17V18C15 19.6569 13.6569 21 12 21C10.3431 21 9 19.6569 9 18V17M15 17H9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+        </button>
+
+        <button type="button" class="flex items-center focus:outline-none" aria-label="toggle profile dropdown">
+            <div class="w-8 h-8 overflow-hidden border-2 border-gray-400 rounded-full">
+                <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80" class="object-cover w-full h-full" alt="avatar">
+            </div>
+
+            <h3 class="mx-2 text-sm font-medium text-gray-700 dark:text-gray-200 md:hidden">Khatab wedaa</h3>
+        </button>
+    </div>
       <button mat-button routerLink="/Profile/{{ userInfo.site_id }}/" *ngIf="userExist;">
         Mitt Sida
       </button>
@@ -70,6 +85,9 @@
       <button *ngIf="userExist;" (click)="Subscription()">Prenumeration</button>
       <button routerLink="/Profile/{{ userInfo.site_id }}/profileServices">Mina tjänster</button>
       <button *ngIf="userExist;" (click)="Logout()">Logga ut</button>
+      <button class="btnMenu" routerLink="aboutUs" mat-button><mat-icon>account_balance_wallet</mat-icon>
+        156.0290 JMICoin
+        </button>
     </div>
 
     <!-- Search input on mobile screen -->
@@ -85,7 +103,7 @@
 
         <input type="text"
           class="w-full py-2 pl-10 pr-4 text-gray-700 bg-white border rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-400 dark:focus:border-blue-300 focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-blue-300"
-          placeholder="Search">
+          placeholder="بحث">
       </div>
     </div>
   </div>
@@ -93,26 +111,26 @@
 
 <div class="py-3 mt-3 -mx-3 overflow-y-auto whitespace-nowrap scroll-hidden">
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">News</a>
+    href="#">الاخبار</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">Articles</a>
+    href="#">المقالات</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">Videos</a>
+    href="#">الرموز الاسلامية هلال</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">Tricks</a>
+    href="#">اركان الاسلام</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">PHP</a>
+    href="#">القران</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">Laravel</a>
+    href="#">الشريعة</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">Vue</a>
+    href="#">المنبر</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">React</a>
+    href="#">المنامات</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">Tailwindcss</a>
+    href="#">الجوامع</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">Meraki UI</a>
-  <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
+    href="#">فتاوي</a>
+  <!-- <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
     href="#">CPP</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
     href="#">JavaScript</a>
@@ -131,7 +149,7 @@
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
     href="#">PHPStorm</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">Sublime</a>
+    href="#">Sublime</a> -->
 </div>
 
 <!--
