--- a/src/app/muslims/muslims.component.html
+++ b/src/app/muslims/muslims.component.html
@@ -1,6 +1,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 
 <div class="container">
+  <app-card-muslim></app-card-muslim>
         <div class="row justify-content-center">
           <div class="col-12 col-sm-8 col-lg-6">
             <!-- Section Heading-->
