--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -41,14 +41,20 @@
   <div class="items-center md:flex">
     <div class="flex flex-col mt-2 md:flex-row md:mt-0 md:mx-1">
       <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
-        href="#">Home</a>
+      href="/religions">الاديان</a>
       <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
-        href="#">Blog</a>
+        href="/muslims">المسلمون</a>
       <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
-        href="#">Compoents</a>
+        href="/continents">القارات</a>
       <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
-        href="#">Courses</a>
+        href="/quran">القران</a>
     </div>
+    <!--
+      stateCourts
+    الشريعة الأساسية
+    الشريعة الفرعية
+
+  -->
 
     <div class="flex items-center py-2 -mx-1 md:mx-0" #showLogin>
 
@@ -130,9 +136,9 @@
     href="#">الجوامع</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
     href="#">فتاوي</a>
-  <!-- <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">CPP</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
+    href="/quran">القران</a>
+  <!--<a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
     href="#">JavaScript</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
     href="#">Ruby</a>
