--- a/src/app/religions/religions.component.html
+++ b/src/app/religions/religions.component.html
@@ -1,1 +1,37 @@
-<p>religions works!</p>
+<div class="py-3 mt-3 -mx-3 overflow-y-auto whitespace-nowrap scroll-hidden">
+  <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
+    href="#">الاخبار</a>
+  <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
+    href="#">المقالات</a>
+  <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
+    href="#">الرموز الاسلامية هلال</a>
+  <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
+    href="#">اركان الاسلام</a>
+  <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
+    href="#">القران</a>
+  <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
+    href="#">الشريعة</a>
+  <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
+    href="#">المنبر</a>
+  <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
+    href="#">المنامات</a>
+  <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
+    href="#">الجوامع</a>
+  <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
+    href="#">فتاوي</a>
+  <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
+    href="/quran">القران</a>
+</div>
+<p>صورة للاديان مع النجوم
+
+  الواحد للاسلام
+  المثلث الماسونية
+  المثلثين المسيحية
+  الثلاث مثلثات
+النجمة الثنائية المسيحية
+  النجمة الثلاثية النجوم
+  النجمة الرباعية المسيحيين
+  النجمة الخماسية للشيطان والشهوات
+  النجمة السداسية لليهود
+  النجمة الثمانية للهندوس
+</p>
