--- a/src/app/religions/religions.component.html
+++ b/src/app/religions/religions.component.html
@@ -18,9 +18,14 @@
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
     href="#">الجوامع</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">فتاوي</a>
+    href="">فتاوي</a>
+
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="/quran">القران</a>
+    href="religions/religionsBooks/quran">القران</a>
+    <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
+    href="/religions/religionsBooks">الكتب الدينية</a>
+    <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
+    [routerLink]="['/religions/islam']" routerLinkActive="router-link-active">الاسلام</a>
 </div>
 <p>صورة للاديان مع النجوم
 
