--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!-- Nav -->
 <nav class="bg-white shadow dark:bg-gray-800">
-  <div class="container px-3 py-3 mx-auto">
+  <!-- <div class="container px-3 py-3 mx-auto"> -->
+    <div class="px-3 py-3 mx-auto">
 
     <app-header></app-header>
     <!-- Container pages -->
@@ -9,6 +10,8 @@
   <router-outlet></router-outlet>
 <!-- Footer -->
 <!-- <app-footer-bottom ></app-footer-bottom> -->
+<app-footer></app-footer>
+
   </div>
 </nav>
 
