--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -41,18 +41,19 @@
   <div class="items-center md:flex">
     <div class="flex flex-col mt-2 md:flex-row md:mt-0 md:mx-1">
       <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
-      href="/allah">أسماء الله</a>
+      href="/allah">الخالق</a>
       <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
-        href="/languages">اللغات</a>
-        <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
-        href="/muslims">المسلمون</a>
+      href="/creatures">المخلوقات</a>
+      <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
+      href="/continents">القارات</a>
+      <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
+      href="/muslims">المسلمون</a>
+      <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
+        href="/languages">الالسن</a>
       <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
         href="/religions">الاديان</a>
-
       <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
-        href="/continents">القارات</a>
-      <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
-        href="/religionsBooks">الكتب الدينية</a>
+        href="/ministries">الوزارات</a>
 
     </div>
     <!--
@@ -62,7 +63,8 @@
   -->
 
     <div class="flex items-center py-2 -mx-1 md:mx-0" #showLogin>
-
+      <!-- <app-user-notifications-menu></app-user-notifications-menu>
+      <app-user-menu></app-user-menu> -->
       <button
       class="flex items-center px-3 py-2 mx-1 text-sm font-medium leading-5 text-center text-white transition-colors duration-200 transform bg-gray-500 rounded-md hover:bg-blue-600 md:mx-2 md:w-auto"
       (click)="openDialogLoging()">
@@ -123,6 +125,7 @@
 
 
 <!--
+
 <span>
 
   <button routerLink="search" mat-button> <span class="mat-h3 LoggaInTitle">Sök </span> <mat-icon>search</mat-icon></button>
