--- a/src/app/religions/islam/islam.component.html
+++ b/src/app/religions/islam/islam.component.html
@@ -1,1 +1,6 @@
-<p>islam works!</p>
+اقسام الوحي:
+وحي الحقيقة هو جبريل يزور الانبياء
+وحي المعنى هو الحديث القدسي معناه من الله ولفظه النبي
+وحي الوسوسة من الشياطين الى اوليائهم
+وحي الاشارة هو الاشارات باليد
+وحي الالهام هذا الوحي موجود عند كل احد حتى الحيوانات والنحل وام موسى
