--- a/src/app/header/creatures/creatures.component.html
+++ b/src/app/header/creatures/creatures.component.html
@@ -17,5 +17,6 @@
 <p>
   الخصائص للمخلوقات
   وخصائص الله او صفاته
-
+الحمد الله الذي خلق السماوات والارض وجعل الظلمات والنور
+لهم دار السلام عند ربهم
 </p>
