--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -41,26 +41,23 @@
   <div class="items-center md:flex">
     <div class="flex flex-col mt-2 md:flex-row md:mt-0 md:mx-1">
       <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
-      href="/allah">الخالق</a>
+      href="/the_creator">الخالق</a>
       <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
       href="/creatures">المخلوقات</a>
       <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
-      href="/continents">القارات</a>
+      href="/languages">اللغات</a>
       <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
-      href="/muslims">المسلمون</a>
+      href="/religionsBooks">الكتب الدينية</a>
       <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
-        href="/languages">الالسن</a>
+      href="/islam">الاسلام</a>
       <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
-        href="/religions">الاديان</a>
-      <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
-        href="/ministries">الوزارات</a>
-
+      href="/muslims">المسلمون صفحة البحث</a>
     </div>
-    <!--
+    <!-- test test
       stateCourts
-    الشريعة الأساسية
-    الشريعة الفرعية
-  -->
+      الشريعة الأساسية
+      الشريعة الفرعية
+    -->
 
     <div class="flex items-center py-2 -mx-1 md:mx-0" #showLogin>
       <!-- <app-user-notifications-menu></app-user-notifications-menu>
