--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -50,8 +50,9 @@
       href="/religionsBooks">الكتب الدينية</a>
       <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
       href="/islam">الاسلام</a>
-      <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
-      href="/muslims">المسلمون صفحة البحث</a>
+      
+      <!-- <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
+      href="/muslims">المسلمون صفحة البحث</a> -->
     </div>
     <!-- test test
       stateCourts
