--- a/src/app/header/islam/islam.component.html
+++ b/src/app/header/islam/islam.component.html
@@ -1,14 +1,14 @@
 <div class="py-3 mt-3 -mx-3 overflow-y-auto whitespace-nowrap scroll-hidden">
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">الاخبار</a>
+  routerLink="/islam/provisions">الأحكام الشرعية</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">المقالات</a>
+    href="islam/doctrines">الاجتهادات</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">الرموز الاسلامية هلال</a>
+    href="islam/jurisprudences">الفقه</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">اركان الاسلام</a>
-  <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="#">القران</a>
+    href="islam/creeds">العقيدة</a>
+    <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
+    href="islam/pillars">اركان الاسلام</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
     href="#">الشريعة</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
@@ -27,23 +27,6 @@
     <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
     [routerLink]="['/religions/islam']" routerLinkActive="router-link-active">الاسلام</a>
 </div>
-<p>صورة للاديان مع النجوم
 
-  الواحد للاسلام
-  المثلث الماسونية
-  المثلثين المسيحية
-  الثلاث مثلثات
-النجمة الثنائية المسيحية
-  النجمة الثلاثية النجوم
-  النجمة الرباعية المسيحيين
-  النجمة الخماسية للشيطان والشهوات
-  النجمة السداسية لليهود
-  النجمة الثمانية للهندوس
-</p>
 
-اقسام الوحي:
-وحي الحقيقة هو جبريل يزور الانبياء
-وحي المعنى هو الحديث القدسي معناه من الله ولفظه النبي
-وحي الوسوسة من الشياطين الى اوليائهم
-وحي الاشارة هو الاشارات باليد
-وحي الالهام هذا الوحي موجود عند كل احد حتى الحيوانات والنحل وام موسى
+
