--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import url(http://fonts.googleapis.com/earlyaccess/droidarabickufi.css);
+@import url(https://fonts.googleapis.com/earlyaccess/droidarabickufi.css);
 
 @tailwind base;
 @tailwind components;
@@ -16,4 +16,8 @@ a{
 a{
   font-family: 'Droid Arabic Kufi', serif;
   word-spacing: 1px;
+}
+p{
+  font-family: 'Droid Arabic Kufi', serif;
+  color:aliceblue;
 }
