--- a/src/app/header/religions/religions-books/religions-books.component.html
+++ b/src/app/header/religions/religions-books/religions-books.component.html
@@ -22,3 +22,25 @@
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
     href="/quran">القران</a>
 </div>
+<p>صورة للاديان مع النجوم
+
+  الواحد للاسلام
+  المثلث الماسونية
+  المثلثين المسيحية
+  الثلاث مثلثات
+النجمة الثنائية المسيحية
+  النجمة الثلاثية النجوم
+  النجمة الرباعية المسيحيين
+  النجمة الخماسية للشيطان والشهوات
+  النجمة السداسية لليهود
+  النجمة الثمانية للهندوس
+</p>
+<p>
+
+  اقسام الوحي:
+  وحي الحقيقة هو جبريل يزور الانبياء
+  وحي المعنى هو الحديث القدسي معناه من الله ولفظه النبي
+  وحي الوسوسة من الشياطين الى اوليائهم
+  وحي الاشارة هو الاشارات باليد
+  وحي الالهام هذا الوحي موجود عند كل احد حتى الحيوانات والنحل وام موسى
+  </p>
