--- a/src/app/footer/policy/policy.component.html
+++ b/src/app/footer/policy/policy.component.html
@@ -1,4 +1,4 @@
-<div class="containerSearch" fxFlex="100" fxLayoutGap="10px">
+<!-- <div class="containerSearch" fxFlex="100" fxLayoutGap="10px">
   <h1>Privacy Policy</h1>
   <p>Last updated: March 19, 2021</p>
   <p>
@@ -762,4 +762,4 @@
 
 </div>
 
-
+ -->
