--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -50,7 +50,7 @@
       href="/religionsBooks">الكتب الدينية</a>
       <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
       href="/islam">الاسلام</a>
-      
+
       <!-- <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
       href="/muslims">المسلمون صفحة البحث</a> -->
     </div>
@@ -66,7 +66,6 @@
       <button
       class="flex items-center px-3 py-2 mx-1 text-sm font-medium leading-5 text-center text-white transition-colors duration-200 transform bg-gray-500 rounded-md hover:bg-blue-600 md:mx-2 md:w-auto"
       (click)="openDialogLoging()">
-      <mat-icon>account_circle</mat-icon>
       <span class="mx-1">تسجيل الدخول</span>
       </button >
       <a class="block w-1/2 px-3 py-2 mx-1 text-sm font-medium leading-5 text-center text-white transition-colors duration-200 transform bg-blue-500 rounded-md hover:bg-blue-600 md:mx-0 md:w-auto"
@@ -89,14 +88,14 @@
             <h3 class="mx-2 text-sm font-medium text-gray-700 dark:text-gray-200 md:hidden">Khatab wedaa</h3>
         </button>
     </div>
-      <button mat-button routerLink="/Profile/{{ userInfo.site_id }}/" *ngIf="userExist;">
+      <button  routerLink="/Profile/{{ userInfo.site_id }}/" *ngIf="userExist;">
         Mitt Sida
       </button>
       <button routerLink="complete">Kompletera profil</button>
       <button *ngIf="userExist;" (click)="Subscription()">Prenumeration</button>
       <button routerLink="/Profile/{{ userInfo.site_id }}/profileServices">Mina tjänster</button>
       <button *ngIf="userExist;" (click)="Logout()">Logga ut</button>
-      <button class="btnMenu" routerLink="aboutUs" mat-button><mat-icon>account_balance_wallet</mat-icon>
+      <button class="btnMenu" routerLink="aboutUs" >
         156.0290 JMICoin
         </button>
     </div>
@@ -126,28 +125,28 @@
 
 <span>
 
-  <button routerLink="search" mat-button> <span class="mat-h3 LoggaInTitle">Sök </span> <mat-icon>search</mat-icon></button>
+  <button routerLink="search" > <span class="mat-h3 LoggaInTitle">Sök </span> </button>
 
 </span>
 
 
 
-<button mat-raised-button class="btnAdd" *ngIf="userExist; else showLogin" routerLink="/addservice">Annonsera <mat-icon>
+<button mat-raised-button class="btnAdd" *ngIf="userExist; else showLogin" routerLink="/addservice">Annonsera 
     add_circle_outline</mat-icon></button>
 
 
 
-<button mat-button routerLink="chat/" *ngIf="userExist;">
+<button  routerLink="chat/" *ngIf="userExist;">
   <mat-icon [matBadge]="messageBadge" [matBadgeHidden]="messageBadge === 0" matBadgeColor="warn">send</mat-icon>
 
 </button>
-<button mat-button routerLink="Approved/" *ngIf="userExist;">
+<button  routerLink="Approved/" *ngIf="userExist;">
   <mat-icon [matBadge]="messageBadge" [matBadgeHidden]="messageBadge === 0" matBadgeColor="warn">inbox</mat-icon>
 
 </button>
 
 
-<button mat-button [matMenuTriggerFor]="menu2" *ngIf="userExist;">
+<button  [matMenuTriggerFor]="menu2" *ngIf="userExist;">
   <div class="imageCont" *ngIf="userInfo['picture'] && userInfo['picture'] !== ''">
     <img class="imgProfile" src="{{ this.SERVER_URL }}{{userInfo['picture']}}">
 
