--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -36,21 +36,21 @@
                   <div class="grid grid-cols-2 gap-6 sm:grid-cols-3 md:grid-cols-4">
                       <div>
                           <h3 class="text-gray-700 uppercase dark:text-white">حول</h3>
-                          <a href="/who" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">لمن هذا الموقع</a>
-                          <a href="/what" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">ماذا تستطيع ان تفعل بهذا الموقع</a>
-                          <a href="/why" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">لماذا بدات هذا الموقع</a>
-                          <a href="/how" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">كيف صنعت هذا الموقع</a>
+                          <a href="who" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">لمن هذا الموقع</a>
+                          <a href="what" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">ماذا تستطيع ان تفعل بهذا الموقع</a>
+                          <a href="why" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">لماذا بدات هذا الموقع</a>
+                          <a href="how" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">كيف صنعت هذا الموقع</a>
                       </div>
                       <div>
                           <h3 class="text-gray-700 uppercase dark:text-white">بيانات تعريف الارتباط وسياسة الخصوصية</h3>
-                          <a href="/policy" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">سياسة الخصوصية</a>
-                          <a href="/cookies" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">بيانات تعريف الارتباط</a>
+                          <a href="policy" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">سياسة الخصوصية</a>
+                          <a href="cookies" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">بيانات تعريف الارتباط</a>
 
                       </div>
                       <div>
                           <h3 class="text-gray-700 uppercase dark:text-white">اتصل بنا</h3>
-                          <a href="/contact" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">طلب</a>
-                          <a href="/faq" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">الاسئلة المتكررة</a>
+                          <a href="contact" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">طلب</a>
+                          <a href="faq" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">الاسئلة المتكررة</a>
 
                           <!-- <span class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">+1 526 654 8965</span> -->
                           <span class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">jihad.sayed.1996@gmail.com</span>
