--- a/src/app/header/muslims/muslims.component.html
+++ b/src/app/header/muslims/muslims.component.html
@@ -21,9 +21,9 @@
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
     href="#">فتاوي</a> -->
     <a class="my-1 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0"
-    href="/ministries">الوزارات</a>
+    href="ministries">الوزارات</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="/quran">القران</a>
+    href="quran">القران</a>
 </div>
 قوله صلى الله عليه وسلم: ((ثلاث لا يغل عليهن قلب مسلم: إخلاص العمل لله، والنصح لأئمة المسلمين، ولزوم جماعتهم فإن دعوتهم تحيط من ورائهم))
 <section class="bg-white dark:bg-gray-900">
