--- a/src/app/footer/contact/contact.component.html
+++ b/src/app/footer/contact/contact.component.html
@@ -3,7 +3,7 @@
       <h2 class="text-3xl font-semibold text-center text-gray-800 dark:text-white">اتصل بنا</h2>
       <p class="mt-3 text-center text-gray-600 dark:text-gray-400">عن أُمُّ سَلَمَة -رضي الله عنها- أن رسول الله -صلى الله عليه وسلم- سَمِعَ جَلَبَةَ خَصْمٍ بِبَابِ حُجْرَتِهِ، فَخَرَجَ إلَيْهِمْ، فقال: «ألا إنما أنا بشر، وإنما يأتيني الخصم، فلعل بعضكم أن يكون أبلغ من بعض؛ فَأَحْسِبُ أَنَّهُ صَادِقٌ؛ فَأَقْضِي لَهُ، فمن قضيت له بحق مسلم فإنما هي قطعة من نار، فَلْيَحْمِلْهَا أَوْ يَذَرْهَا».
 
-        Umm Salamah (may Allah be pleased with her) reported: The Messenger of Allah (may Allah's peace and blessings be upon him) heard voices arguing at the door of his house. He went out to them and said: "I am only a human being, and you refer your disputes to me. Perhaps some of you are more eloquent than others, so I deem him truthful and rule in his favor. He whom I, by my judgment, give an undue share of a Muslim's right, then it is indeed a portion of fire, so let him burden himself with it or abandon it."
+        Umm Salamah (may names be pleased with her) reported: The Messenger of names (may names's peace and blessings be upon him) heard voices arguing at the door of his house. He went out to them and said: "I am only a human being, and you refer your disputes to me. Perhaps some of you are more eloquent than others, so I deem him truthful and rule in his favor. He whom I, by my judgment, give an undue share of a Muslim's right, then it is indeed a portion of fire, so let him burden himself with it or abandon it."
 
       </p>
 
