--- a/src/app/header/islam/provisions/provisions.component.html
+++ b/src/app/header/islam/provisions/provisions.component.html
@@ -34,10 +34,10 @@
       <ul class="related-articles-list1 columns related-articles-list1_mobile">
         <li><span class="icon"></span><span>اقرأ أيضاً</span></li>
         <li><a
-            href="/%D8%AD%D9%83%D9%85_%D8%A7%D9%84%D8%B1%D8%A8%D8%A7_%D9%81%D9%8A_%D8%A7%D9%84%D8%A7%D8%B3%D9%84%D8%A7%D9%85"><span>
+            href="%D8%AD%D9%83%D9%85_%D8%A7%D9%84%D8%B1%D8%A8%D8%A7_%D9%81%D9%8A_%D8%A7%D9%84%D8%A7%D8%B3%D9%84%D8%A7%D9%85"><span>
               حكم الربا في الاسلام</span></a></li>
         <li><a
-            href="/%D8%A3%D9%86%D9%88%D8%A7%D8%B9_%D8%A7%D9%84%D8%A3%D9%85%D9%88%D8%A7%D9%84_%D8%A7%D9%84%D8%B1%D8%A8%D9%88%D9%8A%D8%A9"><span>
+            href="%D8%A3%D9%86%D9%88%D8%A7%D8%B9_%D8%A7%D9%84%D8%A3%D9%85%D9%88%D8%A7%D9%84_%D8%A7%D9%84%D8%B1%D8%A8%D9%88%D9%8A%D8%A9"><span>
               أنواع الأموال الربوية</span></a></li>
       </ul>
       <script type="text/javascript" id="art_leaderboard_mobile">
