--- a/src/app/header/religions/religions-books/religions-books.component.html
+++ b/src/app/header/religions/religions-books/religions-books.component.html
@@ -20,7 +20,7 @@
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
     href="#">فتاوي</a>
   <a class="mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:my-0"
-    href="/quran">القران</a>
+    href="quran">القران</a>
 </div>
 <p>صورة للاديان مع النجوم
 
