--- a/src/app/header/the-creator/names/names.component.html
+++ b/src/app/header/the-creator/names/names.component.html
@@ -17,7 +17,7 @@
         <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
           {{ Name.en.desc}}
         </p>
-        <a href="/allah/{{ Name.id}}"
+        <a href="names/{{ Name.id}}"
           class="inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
           Read more
         </a>
